--- a/src/app/components/skills-hard/skills-hard.component.html
+++ b/src/app/components/skills-hard/skills-hard.component.html
@@ -19,7 +19,7 @@
       </div>
       <!-- Listado Frontend Skills -->
       <div cdkDropList (cdkDropListDropped)="drop($event)">
-        <div *ngFor="let skill of skills; let i = index" [ngSwitch]="skill.tipo" cdkDrag>
+        <div *ngFor="let skill of skills; let i = index" [ngSwitch]="skill.tipo" cdkDrag [cdkDragDisabled]="!loggedIn">
           <div class="container m-3" *ngSwitchCase="'Frontend'">
             <div class="container d-flex flex-row">
               <div class="container d-flex align-items-end">
@@ -58,7 +58,7 @@
       </div>
       <!-- Listado Backend Skills -->
       <div cdkDropList (cdkDropListDropped)="drop($event)">
-      <div *ngFor="let skill of skills; let i = index" [ngSwitch]="skill.tipo" cdkDrag>
+      <div *ngFor="let skill of skills; let i = index" [ngSwitch]="skill.tipo" cdkDrag [cdkDragDisabled]="!loggedIn">
         <div class="container m-3" *ngSwitchCase="'Backend'">
           <div class="container d-flex flex-row">
             <div class="container d-flex align-items-end">
@@ -93,7 +93,7 @@
       </div>
       <!-- Listado Idiomas -->
       <div cdkDropList (cdkDropListDropped)="drop($event)">
-      <div *ngFor="let skill of skills; let i = index" [ngSwitch]="skill.tipo" cdkDrag>
+      <div *ngFor="let skill of skills; let i = index" [ngSwitch]="skill.tipo" cdkDrag [cdkDragDisabled]="!loggedIn">
         <div class="container m-3" *ngSwitchCase="'Idioma'">
           <div class="container d-flex flex-row">
             <div class="container d-flex align-items-end">
