--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -1,75 +1,68 @@
-<div class="container-fluid ">
-  <nav class="navbar navbar-expand-md fixed-top navbar-dark bg-dark ">
 
-
-
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navibot"
-      aria-controls="navibot" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-
-    <div>
+  <nav class="navbar navbar-expand-lg " style="background-color: #a3115f;" data-bs-theme="dark">
+  <div class="container-fluid">
+     <div class="navbar-brand">
       <img src="assets\img\APLogo-20-20.png" alt="argprog" id="argprog">
     </div>
-
-    <div class="collapse navbar-collapse" id="navibot">
-
-        <div class="container d-flex justify-content-around">
-          <div>
-          <ul class="navbar-nav mt-2 mt-lg-0">
-            <li class="nav-item">
-              <a class="nav-link" href="">About</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
-                aria-haspopup="true" aria-expanded="false">
-                Skills
-              </a>
-              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="">Hard</a>
-                <a class="dropdown-item" href="">Soft</a>
-
-              </div>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="">Carrera</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="">Experiencia</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="">Proyectos</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="">Contacto</a>
-            </li>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse justify-content-between" id="navbarNavDropdown">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#aboutme">About me</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Skills
+          </a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="#hard">Hard</a></li>
+            <li><a class="dropdown-item" href="#soft">Soft</a></li>
           </ul>
-        </div>
-
-        </div>
-        <div class="d-inline-flex">
-          <a class="btn" href="#!" role="button">
-            <i class="fa fa-facebook-square fa-2x"></i>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Carrera
           </a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="#experiencia">Experiencia</a></li>
+            <li><a class="dropdown-item" href="#educacion">Educacion</a></li>
+          </ul>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#proyectos">Proyectos</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#contacto">Contacto</a>
+        </li>
+      </ul>
+      <div>
 
-          <a class="btn" href="#!" role="button">
-            <i class="fa fa-instagram fa-2x"></i>
-          </a>
+      <div class="d-inline-flex">
+        <a class="btn m-1" href="#!" role="button">
+          <i class="fa fa-facebook-square fa-2x text-white"></i>
+        </a>
 
-          <a class="btn" href="#!" role="button">
-            <i class="fa fa-github fa-2x"></i>
-          </a>
+        <a class="btn m-1" href="#!" role="button">
+          <i class="fa fa-instagram fa-2x text-white"></i>
+        </a>
 
-           <!-- Button trigger modal -->
-
-        <button type="button" class="btn btn-light" data-bs-toggle="modal" data-bs-target="#loginModal" *ngIf="!loggedIn" >Login </button>
-        <button type="button" class="btn btn btn-light" (click)="onLogout()"  *ngIf="loggedIn" >Logout </button>
-        </div>
-
+        <a class="btn m-1" href="#!" role="button">
+          <i class="fa fa-github fa-2x text-white"></i>
+        </a>
+        <button type="button" class="btn btn-light m-2 text-uppercase" data-bs-toggle="modal" data-bs-target="#loginModal" *ngIf="!loggedIn">Login</button>
+        <button type="button" class="btn btn-light m-2 text-uppercase" (click)="onLogout()"  *ngIf="loggedIn">Logout</button>
       </div>
 
+    </div>
+    </div>
+
+  </div>
+</nav>
 
 
-  </nav>
-</div>
+
+
+
 <app-login></app-login>
