--- a/src/app/components/aboutme/aboutme.component.html
+++ b/src/app/components/aboutme/aboutme.component.html
@@ -1,32 +1,43 @@
 <div class="container-fluid mb-5 flex-column" id="aboutme">
   <!-- Nombre -->
-  <div #about class="container text-white ani">
-    <h1 class="titulo">Hola! Soy <b id="nombre">{{persona.nombre}}</b></h1>
-  </div>
-  <!--Imagen -->
-  <div class="container mt-5 mb-5 d-flex justify-content-center align-items-center">
-    <img #about2 class="yoimg ani" [src]="persona.imagen" alt="yo">
-  </div>
-  <!--Descripcion -->
-  <div #about3 class="container d-flex align-items-center flex-column mt-5 ani">
-    <div class="container text-center" id="descrip">
-      <p class="parrafo"> {{persona.descripcion}}
-      </p>
-    </div>
-    <div class="container d-flex justify-content-end">
-      <!-- Boton modal edicion -->
-      <i class="fa-solid fa-pencil m-2 text-white" (click)="EditPersona(persona.id)" *ngIf="loggedIn"></i>
-      <!--Boton eliminar -->
-      <i class="fa-solid fa-trash m-2 text-white" *ngIf="loggedIn"></i>
-    </div>
+    <h1 #about class="titulo mt-5 mb-0 ani">About Me</h1>
+<div></div>
+
+<div class="container d-flex align-items-end justify-content-end mt-5">
+  <!-- Boton modal edicion -->
+  <i class="fa-solid fa-pencil m-2 text-white" (click)="EditPersona(persona.id)" *ngIf="loggedIn"></i>
+  <!--Boton eliminar -->
+  <i class="fa-solid fa-trash m-2 text-white" *ngIf="loggedIn"></i>
+</div>
+<!--Imagen -->
+  <div class="container d-flex flex-row mt-1">
+    <div #about2 class="card-column p-0">
+      <div class="card">
+        <div class="border"></div>
+        <img [src]="persona.imagen" alt="yo"/>
+        <h5>{{persona.nombre}}</h5>
+      </div>
+      </div>
+       <!--Descripcion -->
+      <div #about3 class="container d-flex align-items-center">
+        <p class="text-white" id="descrip"> {{persona.descripcion}}
+        </p>
+      </div>
+        </div>
+
+
+
+  <div #about3 class="container d-flex align-items-center flex-column mt-1 ">
     <!-- Modal boton agregar Hobby -->
-    <div class="container d-flex justify-content-end mt-5 mb-1">
+    <div class="container d-flex justify-content-end mt-2 mb-1">
     <button type="button" class="btn text-white"
       (click)="addEditInteres(id)" *ngIf="loggedIn">
       <i class="fa-solid fa fa-plus fa-1x m-1"></i>
       <span class="text-white" id="addBtn">Agregar</span>
     </button>
   </div>
+
+
     <!--Hobbies -->
     <div class=" mb-5 " cdkDropList (cdkDropListDropped)="drop($event)">
       <div *ngFor="let interes of intereses; let i = index" id="listHobby" cdkDrag [cdkDragDisabled]="!loggedIn">
