--- a/src/app/components/aboutme/aboutme.component.css
+++ b/src/app/components/aboutme/aboutme.component.css
@@ -11,26 +11,24 @@
   margin: 2%;
 }
 
-/*Estilos titulo "Hola soy..." */
-.titulo {
-  font-size: calc(1rem + 4vw);
-  color: #ffffff;
-  letter-spacing: 15px;
-  text-align: center;
-  text-transform: uppercase;
+/*Estilo titulo principal y animacion*/
+h1 {
   font-family: "Fredoka One", sans-serif;
-  font-weight: 900;
-}
-
-
-/*Estilos nombre*/
-b {
+  font-size: calc(1rem + 3.5vw);
+  text-align: start;
   color: #00EBC6;
+  -webkit-text-stroke: 1px #ffffff;
+  text-transform: uppercase;
+  letter-spacing: 15px;
+  padding: 1px;
+  transition: 2s;
+  transform: scale(0)
 }
 
-#nombre {
-  color: #C91A76;
+h1.fadeIn {
+  transform: scale(1)
 }
+
 
 /*Estilos para efecto FadeIn*/
 .ani {
@@ -57,9 +55,9 @@ b {
 
 /*Estilos descripcion*/
 #descrip {
-  width: 75%;
-  font-size: calc(.4rem + 1vw);
+  width: 90%;
   font-family: "Roboto", sans-serif;
+  font-size: 20px;
   color: #ffffff;
 }
 
@@ -82,4 +80,65 @@ b {
 
 #addBtn{
   font-size: 18px;
+}
+
+
+/* Cards */
+.card-column {
+  width: 50%;
+  float: left;
+  padding: 4%;
+  box-sizing: border-box;
+}
+
+.card {
+  width: 90%;
+  max-width:280px;
+  min-width: 280px;
+  margin-left: auto;
+  margin-right: auto;
+  position: relative;
+  background: #00EBC6;
+  color: #fff;
+  margin-bottom: 10px;
+}
+
+.border {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  padding: 6px;
+  border: 1px solid #fff;
+  opacity: 0.5;
+  left: -6px;
+  top: -6px;
+}
+
+.card h5 {
+  position: relative;
+  font-size: 18px;
+  width: 70%;
+  padding: 320px 0px 10px 10px;
+  color: #ffffff;
+}
+
+.card > img {
+  width: 90%;
+  position: absolute;
+  top: -3%;
+  left: -3%;
+  border-radius: 10px;
+}
+
+
+/*
+** Media Queries
+*/
+
+@media screen and (max-width: 600px) {
+  .card-column {
+    width: 90%;
+  }
+
+
 }
