--- a/src/app/components/proyectos/proyectos.component.html
+++ b/src/app/components/proyectos/proyectos.component.html
@@ -16,7 +16,7 @@
         <a href={{proyecto.link}}>
         <img [src]="proyecto.imagen" class="card-img-top" alt="proyecto">
         <div class="card-body align-items-strech">
-          <h5 class="card-title ">{{proyecto.nombre}} - {{proyecto.anio}}</h5>
+          <h5 class="card-title text-white">{{proyecto.nombre}} - {{proyecto.anio}}</h5>
           <p class="card-text text-white">{{proyecto.descripcion}}</p>
         </div>
       </a>
