--- a/src/app/components/skills-soft/skills-soft.component.css
+++ b/src/app/components/skills-soft/skills-soft.component.css
@@ -1,7 +1,7 @@
 /*Estilo titulo principal y animacion*/
 h1 {
   font-family: "Fredoka One", sans-serif;
-  font-size: calc(1rem + 3vw);
+  font-size: calc(1rem + 3.5vw);
   text-align: start;
   color: #00EBC6;
   -webkit-text-stroke: 1px #ffffff;
@@ -40,11 +40,6 @@ span{
   border-bottom: 1px solid #ffffff;
 }
 
-/*Titulo Card*/
-h5 {
-  color: #ffffff;
-  font-size: calc(.6rem + .8vw);
-}
 
 /*Cuerpo Card*/
 .card-body {
@@ -54,6 +49,8 @@ h5 {
 img{
   width: 100%;
 }
+
+/* Media Queries*/
 
 @media (max-width: 767.98px) {
   h1 {
