--- a/src/app/components/skills-soft/skills-soft.component.html
+++ b/src/app/components/skills-soft/skills-soft.component.html
@@ -16,7 +16,7 @@
       <div class="card m-2" style="width: 18rem;">
         <img [src]="skill.imagen" class="card-img-top" alt="skill">
         <div class="card-body ">
-          <h5 class="card-title">{{skill.nombre}}</h5>
+          <h5 class="card-title text-white">{{skill.nombre}}</h5>
           <p class="card-text text-white">{{skill.descripcion}}</p>
         </div>
       </div>
