--- a/src/app/components/contacto/contacto.component.html
+++ b/src/app/components/contacto/contacto.component.html
@@ -18,7 +18,7 @@
     </a>
   </div>
   <div class="container d-flex justify-content-center mb-3">
-    <app-red></app-red>
+    <app-red [onNav]="false"></app-red>
   </div>
   <!-- Copyright -->
   <div class="text-start p-2 d-flex align-items-end mt-3" style="background-color: rgba(0, 0, 0, 0.2);">
