--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -1,16 +1,19 @@
-
-  <nav class="navbar navbar-expand-lg " style="background-color: #a3115f;" data-bs-theme="dark">
+<!-- Barra de navegacion -->
+<nav class="navbar navbar-expand-lg p-0" style="background-color: #a3115f;" data-bs-theme="dark">
   <div class="container-fluid">
-     <div class="navbar-brand">
+    <!-- Logo ArgProg -->
+    <div class="navbar-brand">
       <img src="assets\img\APLogo-20-20.png" alt="argprog" id="argprog">
     </div>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
+      aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
+    <!-- Secciones -->
     <div class="collapse navbar-collapse justify-content-between" id="navbarNavDropdown">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#aboutme">About me</a>
+          <a class="nav-link active" aria-current="page" href="#aboutme">Sobre mi</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -38,31 +41,21 @@
         </li>
       </ul>
       <div>
+        <!-- Redes-->
+        <div class=" container d-flex align-items-center">
+          <app-red class="mt-3" [onNav]="true"></app-red>
 
-      <div class="d-inline-flex">
-        <a class="btn m-1" href="#!" role="button">
-          <i class="fa fa-facebook-square fa-2x text-white"></i>
-        </a>
+          <!-- Login/Logout-->
+          <button type="button" class="btn btn-light m-1 text-uppercase text-white" data-bs-toggle="modal"
+            data-bs-target="#loginModal" *ngIf="!loggedIn">Login</button>
+          <button type="button" class="btn btn-light m-1 text-uppercase text-white" (click)="onLogout()"
+            *ngIf="loggedIn">Logout</button>
+        </div>
 
-        <a class="btn m-1" href="#!" role="button">
-          <i class="fa fa-instagram fa-2x text-white"></i>
-        </a>
-
-        <a class="btn m-1" href="#!" role="button">
-          <i class="fa fa-github fa-2x text-white"></i>
-        </a>
-        <button type="button" class="btn btn-light m-2 text-uppercase" data-bs-toggle="modal" data-bs-target="#loginModal" *ngIf="!loggedIn">Login</button>
-        <button type="button" class="btn btn-light m-2 text-uppercase" (click)="onLogout()"  *ngIf="loggedIn">Logout</button>
       </div>
-
-    </div>
     </div>
 
   </div>
 </nav>
-
-
-
-
-
 <app-login></app-login>
+
