--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -1,48 +1,27 @@
-<div class="contenido">
-<app-navigation></app-navigation>
+<!--Contendio principal de la pagina-->
+  <app-navigation></app-navigation>
 
-<app-aboutme></app-aboutme>
+  <app-background></app-background>
 
-<app-skills-hard></app-skills-hard>
+  <app-boton-scroll></app-boton-scroll>
 
-<app-skills-soft></app-skills-soft>
+  <app-welcome></app-welcome>
 
-<app-educacion></app-educacion>
+  <app-aboutme></app-aboutme>
 
-<app-experiencia></app-experiencia>
+  <app-skills-hard></app-skills-hard>
 
-<app-proyectos></app-proyectos>
+  <app-skills-soft></app-skills-soft>
 
-<app-contacto></app-contacto>
+  <app-educacion></app-educacion>
 
-<div class="scrollToTop" [ngClass]="{'showScrollToTop': windowScrolled}">
-    <button type="button" class="btn" data-toggle="button" aria-pressed="true" (click)="scrollToTop()">
-        <i class="fas fa-chevron-up text-white" ></i>
-    </button>
-  </div>
+  <app-experiencia></app-experiencia>
 
-</div>
+  <app-proyectos></app-proyectos>
 
-<div class="background">
-  <span></span>
-  <span></span>
-  <span></span>
-  <span></span>
-  <span></span>
-  <span></span>
-  <span></span>
-  <span></span>
-  <span></span>
-  <span></span>
-  <span></span>
-  <span></span>
-  <span></span>
-  <span></span>
-  <span></span>
-  <span></span>
-  <span></span>
-  <span></span>
-  <span></span>
-  <span></span>
-</div>
+  <app-contacto></app-contacto>
+
+
+
+
 
