--- a/src/app/components/welcome/welcome.component.html
+++ b/src/app/components/welcome/welcome.component.html
@@ -1,1 +1,24 @@
-<p>welcome works!</p>
+<div class="container text-white mt-5 m-3 d-flex flex-column align-items center">
+  <p class="hola p-0">Hola!</p>
+  <!--Segunda linea soy Paula-->
+  <div class="segundalinea">
+    <p class="soy">me llamo</p>
+    <div class="container d-flex flex-row nombre">
+      <div class="p">P</div>
+      <div class="a">A</div>
+      <div class="u">U</div>
+      <div class="l">L</div>
+      <div class="aa">A</div>
+    </div>
+     </div>
+</div>
+<div class="container d-flex flex-column m-3">
+  <p class="devep mt-3 text-white"> Fullstack Web Developer</p>
+  <ul class="typing text-white p-0 ml-0">
+    <li><span>Html</span></li>
+    <li><span>Typescript</span></li>
+    <li><span>Css</span></li>
+    <li><span>Java</span></li>
+  </ul>
+</div>
+
