--- a/src/app/components/skills-hard/skills-hard.component.css
+++ b/src/app/components/skills-hard/skills-hard.component.css
@@ -71,7 +71,7 @@ span{
 }
 
 .spring {
-  background: linear-gradient(to left, #316d5b 0%, #6ea94e 100%);
+  background: linear-gradient(to left, #095840 0%, #7dc258 100%);
 }
 
 .mysql {
